[191765], [191768] Updated MANIFEST.MF and build.properties files to single-jar the plugin

--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.lexer/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.lexer/build.properties
@@ -1,24 +1,17 @@
-source.lexer.jar = src/
-output.lexer.jar = bin/
+source.. = src/
+output.. = bin/
 bin.includes = plugin.xml,\
-               lexer.jar,\
-               thirdparty/,\
+               .,\
                META-INF/,\
-               thirdparty/lpg.jar,\
                about.html
 src.includes = src/,\
-               plugin.xml,\
-               build.properties,\
-               bin/,\
-               thirdparty/
-jars.compile.order = lexer.jar,\
-                     thirdparty/lpg.jar
-              
-jars.extra.classpath =
-src.dir =		src/
-plugin.version =	1.0.0.200706071
-javadoc.dir =		doc/api/
-download.dir =		./download/
-javac.source =		1.4
-javac.target =		1.4
+               .classpath,\
+               build.properties
+
+src.dir = src/
+plugin.version = 1.0.0.200706151
+javadoc.dir = doc/api/
+download.dir = ./download/
+javac.source = 1.4
+javac.target = 1.4
  
