--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.xml.query/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.xml.query/build.properties
@@ -1,21 +1,16 @@
-source.sqlxmlqueryparser.jar = src/
-output.sqlxmlqueryparser.jar = bin/
+source.. = src/
+output.. = bin/
 bin.includes = plugin.xml,\
-               sqlxmlqueryparser.jar,\
+               .,\
                META-INF/,\
                about.html,\
                plugin.properties
-src.includes = .classpath,\
-               .cvsignore,\
-               .project,\
-               build.properties,\
-               plugin.xml,\
-               src/,\
-               bin/
+src.includes = src/,\
+               .classpath,\
+               build.properties
 
-jars.extra.classpath =
 src.dir =		src/
-plugin.version =	1.0.0.200706071
+plugin.version =	1.0.0.200706151
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
