--- a/tests/org.eclipse.datatools.sqltools.parsers.sql.test/build.properties
+++ b/tests/org.eclipse.datatools.sqltools.parsers.sql.test/build.properties
@@ -1,5 +1,7 @@
-source.test.jar = src/
-output.test.jar = bin/
+source.. = src/
+output.. = bin/
 bin.includes = plugin.xml,\
-               test.jar,\
-               META-INF/
+               .,\
+               plugin.properties,\
+               META-INF/,\
+               about.html
