*** empty log message ***

--- a/plugins/org.eclipse.datatools.sqltools.result/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result/plugin.properties
@@ -7,3 +7,7 @@ RemoveResultAction.command.name=Remove Result
 RemoveAllResultAction.command.name=Remove All Visible Results
 TerminateInstanceAction.command.name=Terminate Result
 DataTools.name=Data Tools
+Outputter.plain.text=Plain Text
+Outputter.xml=XML
+Outputter.html=HTML
+Outputter.csv=CSV File
