--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
@@ -29,3 +29,8 @@ datatools.preferences.sqlfile.name=SQL Files/Scrapbooks
 
 DatabaseManagement.command.attach=Set Connection Information
 
+sql_scrapbook=SQL Scrapbook
+open_sql_scrapbook=Open SQL Scrapboo&amp;k
+open_sql_scrapbook_tooltip=Open scrapbook to edit SQL statements
+
+
