[BZ194967] Correcting some unnecessary DSE refs in control labels

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -67,8 +67,8 @@ NewConnectionProfileWizardPage.cp_desc = Description(optional):
 NewConnectionProfileWizardPage.choices = Please select:
 NewConnectionProfileWizardPage.summary_cp_name = Name
 NewConnectionProfileWizardPage.summary_cp_desc = Description
-NewConnectionProfileWizardPage.Button.AutoConnect = Auto-connect when the wizard is finished or when Data Source Explorer opens.
-NewConnectionProfileWizardPage.Button.AutoConnect1 = Auto-connect when Data Source Explorer opens.
+NewConnectionProfileWizardPage.Button.AutoConnect = Auto-connect at startup.
+NewConnectionProfileWizardPage.Button.AutoConnect1 = Auto-connect at startup.
 NewConnectionProfileWizardPage.summary_autoconnect = Auto connect
 NewConnectionProfileWizardPage.localRepository = Create in workspace repository (local)
 NewConnectionProfileWizardPage.chooseRepository = Choose repository:
