--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
@@ -14,7 +14,7 @@ Plugin.ProviderName = Eclipse.org
 Database.category = Databases
 Extension.PropertyPage.General.Name = Common
 Extension.PropertyPage.Version.Name = Version
-ProfileFailure = Data Source Explorer Failures
+ProfileFailure = Profile Failures
 Extension.NewWizard.Name = Connection Profile
 Extension.NewWizard.Description = Create a connection profile
 Extension.NewRepositoryWizard.Name = Connection Profile Repository
