[BZ197398] Fixing issue with DSE expand all hanging

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
@@ -21,6 +21,8 @@ DSE.Disconnect.label = &Disconnect
 DSE.SelectAll.label = Select &All
 DSE.DeselectAll.label = &Deselect All
 DSE.View.Tooltip = Data Source Explorer
+DSE.Jobs.ExpandAll.label = Expand All...
+DSE.Jobs.ExpandAll.Subtask.label = Expanding... {0}
 ServersView.action.newCP = &New...
 ProfileSelectionDialogPage.validation.error = Please select a profile.
 NewConnectionProfileWizard.title = New connection profile
