--- a/plugins/org.eclipse.datatools.sqltools.debugger.core/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core/plugin.xml
@@ -50,7 +50,7 @@
 	    	 <!--actionSet
                id="org.eclipse.datatools.sqltools.debugger.actionsets">
              </actionSet-->
-             
+            
 		<!-- Top left -->
          <view
                   closeable="true"
@@ -60,7 +60,7 @@
                   showTitle="true"
                   ratio="0.25"
                   relationship="top"
-                  relative="org.eclipse.ui.editors"
+                  relative="org.eclipse.ui.editorss"
                   id="org.eclipse.debug.ui.DebugView"/>
 		<!-- Top right -->
          <view
@@ -79,7 +79,6 @@
                   moveable="true"
                   visible="true"
                   showTitle="true"
-                  ratio="0.5"
                   relationship="stack"
                   relative="org.eclipse.debug.ui.VariableView"
                   id="org.eclipse.debug.ui.BreakpointView"/>       
@@ -92,8 +91,8 @@
                   visible="true"
                   showTitle="true"
                   ratio="0.65"
-                  relationship="stack"
-                  relative="org.eclipse.ui.console.ConsoleView"
+                  relationship="bottom"
+                  relative="org.eclipse.ui.editorss"
                   id="org.eclipse.datatools.sqltools.result.resultView"/>	
          <view
                   closeable="true"
@@ -101,20 +100,9 @@
                   moveable="true"
                   visible="false"
                   showTitle="true"
-                  ratio="0.65"
                   relationship="stack"
                   relative="org.eclipse.datatools.sqltools.result.resultView"
-                  id="org.eclipse.datatools.sqltools.debugger.planView"/>	
-         <view
-                  closeable="true"
-                  standalone="false"
-                  moveable="true"
-                  visible="false"
-                  showTitle="true"
-                  ratio="0.65"
-                  relationship="stack"
-                  relative="org.eclipse.datatools.sqltools.result.resultView"
-                  id="org.eclipse.datatools.sqltools.debugger.rowsView"/>	
+                  id="org.eclipse.datatools.sqltools.plan.planView"/>	
                                     		             
 		<!-- Right -->
          <view
@@ -125,7 +113,7 @@
                   showTitle="true"
                   ratio="0.75"
                   relationship="right"
-                  relative="org.eclipse.ui.editors"
+                  relative="org.eclipse.ui.editorss"
                   id="org.eclipse.ui.views.ContentOutline"/>	
 
 
