Fix Bugzilla  Bug 194535 Mnemonic missing on oda WS's Data Set Property Labels

--- a/plugins/org.eclipse.datatools.enablement.oda.ws/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws/plugin.properties
@@ -25,5 +25,5 @@ connection.profile.name=Web Services Data Source Connection Profile
 datasource.property.soapEndPoint=&SOAP End Point
 datasource.property.connectionClass=Connection &Class
 datasource.property.connectionTimeOut=Connection &Time Out
-dataset.property.xmlFileURI=XML File
-dataset.property.xsdFileURI=Schema File
+dataset.property.xmlFileURI=&XML File
+dataset.property.xsdFileURI=&Schema File
