[BZ199807] Fixing issue with no template when retrieving driver instance properties

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -65,3 +65,4 @@ CreateOfflineConnectionJob.error = Error creating offline {0} connection to {1}.
 ManagedConnection_save_not_connected_error = Must be connected to server to save offline data.
 ManagedConnection_offline_not_supported_error = {0} does not support working offline.
 
+drivers.error.finding.property.no.template = Problem attempting to retrieve {0} from driver template.
