200509: Error message appear in the new debug configuration dialog 200648: Backslash escapes the following single quote in SQL high lighting. resouce bundle changes

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.properties
@@ -1,5 +1,5 @@
 category.datatools.name=Database Tools
-category.datatools.description=Database development tools
+category.datatools.description=Database Development tools
 
 DatabaseManagement.command.explain=Get Execution Plan
 DatabaseManagement.command.execute=Execute All
