--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/templates/dialog/TextEditorTemplateMessages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/templates/dialog/TextEditorTemplateMessages.properties
@@ -66,7 +66,7 @@ EditTemplateDialog_cut=Cu&t
 EditTemplateDialog_copy=&Copy
 EditTemplateDialog_paste=&Paste
 EditTemplateDialog_select_all=Select &All
-EditTemplateDialog_autoinsert=Auto&matically insert
+EditTemplateDialog_autoinsert=Auto&matically Insert
 EditTemplateDialog_content_assist=Insert &Variable...
 
 TemplateVariableProposal_error_title=Error applying template variable proposal
