--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/preferences/PreferenceMessages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/preferences/PreferenceMessages.properties
@@ -5,7 +5,7 @@ CodeAssist_showSystemGroup=Show database objects
 CodeAssist_showSystemTables=Show system &tables
 CodeAssist_showSystemProcedures=Show system &procedures and functions
 CodeAssist_showOwnerOfTable=Show &owner of table or view
-CodeAssist_asa_tips=The following preferences are only available for ASA database:
+CodeAssist_asa_tips=The following preferences are only available for SQL Anywhere database:
 CodeAssist_showSystemViews=Show system &views
 CodeAssist_asa_titile=&ASA
 CodeAssist_insertSingleProposals=&Insert single proposals automatically
@@ -59,7 +59,7 @@ SQLEditor_typingAidsTable_context_all=All
 
 SQLEditor_typingAids_preview=Preview:
 
-General_max_row_num=Maxium line number must be greater than zero.
+General_max_row_num=Maximum line number must be greater than zero.
 General_invalid_int=\ is not a valid integer
 
 GeneralPreferencePage_portable_target=None
