--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/templates/default-templates.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/templates/default-templates.properties
@@ -19,7 +19,7 @@ Templates.case.search=conditional SQL expressions based upon search condition
 Templates.event=create a daily event
 Templates.function=create a function
 Templates.sp=create a stored procedure
-Templates.trigger.asa=create a ASA trigger
+Templates.trigger.asa=create a SQL Anywhere trigger
 Templates.trigger=create a trigger
 Templates.trigger.column=create a trigger operating on column updates
 Templates.cursor=the whole cursor operation
