--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
@@ -20,7 +20,7 @@ NewSQLScrapbookFileCreationWizard.title=New SQL File
 NewSQLScrapbookFileWizardPage.title=Create SQL File
 
 NewSQLScrapbookFileWizardPage.error.AlreadyExists=A file with the specified path already exists.
-NewSQLScrapbookFileWizardPage.open_error.message=Error occurred while opening SQL file editor
+NewSQLScrapbookFileWizardPage.open_error.message=Error occurred while opening SQL File Editor
 NewFileWithProfilePage.error.profile=Select a database connection profile for this resource
 
 ScrapbookEditor.name=SQL File Editor
