--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/SQLEditorResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/SQLEditorResources.properties
@@ -35,7 +35,7 @@ SQLEditor_outlinePage_sqlSegment_titlePattern=position {0}
 SQLEditor_connection_status_noConnection = No connection
 SQLEditor_file_deleted_or_not_accessible=The original file "{0}" has been deleted or is not accessible.
 #SQLEditor_connection_errorDialog_title   = Connection Exception
-#SQLeditor_connection_errorDialog_message = Connection has failed_ The following error was reported:\n"{0}"
+#SQLeditor_connection_errorDialog_message = Connection has. The following error was reported:\n"{0}"
 
 ## Miscellaneous resources
 
@@ -44,7 +44,7 @@ SQLEditor_file_deleted_or_not_accessible=The original file "{0}" has been delete
 #SQLEditor_error_save_title=Problems During Save As__.
 #SQLEditor_warning_save_delete=The original file ''{0}'' has been deleted.
 
-plugin_internal_error=SQLEditor plugin internal error
+plugin_internal_error=SQL Editor plugin internal error
 
 #AbstractSQLHover_makeStickyHint=Press {0} for focus.
 
@@ -58,7 +58,7 @@ EditorManager_operationFailed = {0} Failed
 
 Save = Save
 
-SQLEditor_error_while_trying_to_install_sql_updater=Error occurred while trying to install sql udpater
+SQLEditor_error_while_trying_to_install_sql_updater=Error occurred while trying to install SQL udpater
 
 SQLEditorStorage_default_name=Scrapbook
 
