--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/editor/ConstructedEditorMessages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/editor/ConstructedEditorMessages.properties
@@ -1,5 +1,5 @@
 SetConnectionInfo.label       =Set Connec&tion Info
 SetConnectionInfo.tooltip     =Set Connection Information
 SetConnectionInfo.image       =
-SetConnectionInfo.description =Set connection information of the editor
+SetConnectionInfo.description =Set connection information for the editor
 
