--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <plugin>
+   <extension-point id="dbdeffilter" name="dbdefinition filter" schema="schema/dbdeffilter.exsd"/>
 
      <extension
          point="org.eclipse.ui.editors">
