[202355]  Need zSeries V9 dbdefinitions and driver definitions

--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries.dbdefinition/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries.dbdefinition/plugin.properties
@@ -24,3 +24,11 @@ V8NewFunctionVersionString = V8 (New-Function Mode)
 V7Description = IBM DB2 UDB for z/OS and OS 390 Version 7
 V8CompatibilityDescription = IBM DB2 UDB for z/OS Version 8 in compatibility mode
 V8NewFunctionDescription = IBM DB2 UDB for z/OS Version 8 in new-function mode
+
+V9CompatibilityDescription = IBM DB2 for z/OS Version 9 in compatibility mode
+V9CompatibilityProductString = DB2 UDB zSeries
+V9CompatibilityVersionString = V9 (Compatibility Mode)
+
+V9NewFunctionDescription = IBM DB2 for z/OS Version 9 in new-function mode
+V9NewFunctionProductString = DB2 UDB zSeries
+V9NewFunctionVersionString = V9 (New-Function Mode)
