202249: prevent disconnect during debugging

--- a/plugins/org.eclipse.datatools.sqltools.result/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.result/build.xml
@@ -55,6 +55,7 @@
 			<include name="org.eclipse.emf.common*.jar"/>
 			<include name="org.eclipse.emf.ecore*.jar"/>
 			<include name="org.apache.lucene*.jar"/>
+			<include name="org.eclipse.help*.jar"/>
         </fileset>		
 		<fileset dir="${eclipse.home}/plugins">
 			<!-- Include expanded plug-ins -->
