--- a/plugins/org.eclipse.datatools.sqltools.plan/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.plan/build.xml
@@ -75,6 +75,7 @@
 				<include name="org.eclipse.emf.common*.jar"/>
 				<include name="org.eclipse.emf.ecore*.jar"/>
 				<include name="org.eclipse.draw2d*.jar"/>
+				<include name="org.eclipse.help*.jar"/>
 	        </fileset>
 			<!--The generated dtp plugins-->
 			<fileset dir="${plugin.destination}">
