--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/build.xml
@@ -54,6 +54,7 @@
             <include name="org.eclipse.debug.*.jar"/>
 			<include name="org.eclipse.emf.common*.jar"/>
 			<include name="org.eclipse.emf.ecore*.jar"/>
+			<include name="org.eclipse.help*.jar"/>
         </fileset>
 		<!--The generated dtp plugins-->
 		<fileset dir="${plugin.destination}">
