--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/build.xml
@@ -137,7 +137,7 @@
 			<fileset dir="${build.result.folder}/@dot" includes="**"			/>
 		</copy>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="true" overwrite="false">
-			<fileset dir="${basedir}" includes="META-INF/,schema/,templates/,icons/,plugin.xml,plugin.properties,about.html"			/>
+			<fileset dir="${basedir}" includes="META-INF/,schema/,templates/,icons/,plugin.xml,default.properties,plugin.properties,about.html"			/>
 		</copy>
 	</target>
 
