[202857]  Names for IBM JDBC and DB2 databases should be updated

--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries.dbdefinition/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries.dbdefinition/plugin.properties
@@ -12,10 +12,10 @@
 pluginName = DB2 UDB iSeries Database Definition Plug-in
 providerName = Eclipse.org
 
-V5R2ProductString = DB2 UDB iSeries
+V5R2ProductString = DB2 for i5/OS
 V5R2VersionString = V5R2
 
-V5R3ProductString = DB2 UDB iSeries
+V5R3ProductString = DB2 for i5/OS
 V5R3VersionString = V5R3
 
 V5R2Description = IBM DB2 UDB for iSeries Version 5 Release 2
