--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries.dbdefinition/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries.dbdefinition/plugin.properties
@@ -12,13 +12,13 @@
 pluginName = DB2 UDB Database Definition Plug-in
 providerName = Eclipse.org
 
-V7ProductString = DB2 UDB zSeries
+V7ProductString = DB2 for z/OS
 V7VersionString = V7
 
-V8CompatibilityProductString = DB2 UDB zSeries
+V8CompatibilityProductString = DB2 for z/OS
 V8CompatibilityVersionString = V8 (Compatibility Mode)
 
-V8NewFunctionProductString = DB2 UDB zSeries
+V8NewFunctionProductString = DB2 for z/OS
 V8NewFunctionVersionString = V8 (New-Function Mode)
 
 V7Description = IBM DB2 UDB for z/OS and OS 390 Version 7
@@ -26,9 +26,9 @@ V8CompatibilityDescription = IBM DB2 UDB for z/OS Version 8 in compatibility mod
 V8NewFunctionDescription = IBM DB2 UDB for z/OS Version 8 in new-function mode
 
 V9CompatibilityDescription = IBM DB2 for z/OS Version 9 in compatibility mode
-V9CompatibilityProductString = DB2 UDB zSeries
+V9CompatibilityProductString = DB2 for z/OS
 V9CompatibilityVersionString = V9 (Compatibility Mode)
 
 V9NewFunctionDescription = IBM DB2 for z/OS Version 9 in new-function mode
-V9NewFunctionProductString = DB2 UDB zSeries
+V9NewFunctionProductString = DB2 for z/OS
 V9NewFunctionVersionString = V9 (New-Function Mode)
