--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.luw.dbdefinition/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.luw.dbdefinition/plugin.properties
@@ -12,14 +12,15 @@
 pluginName = Eclipse Data Tools Platform DB2 UDB Database Definition Plug-in
 providerName = Eclipse.org
 
-V81ProductString = DB2 UDB
+V81ProductString = DB2 for Linux, UNIX, and Windows
 V81VersionString = V8.1
 
-V82ProductString = DB2 UDB
+V82ProductString = DB2 for Linux, UNIX, and Windows
 V82VersionString = V8.2
 
-V91ProductString = DB2 UDB
+V91ProductString = DB2 for Linux, UNIX, and Windows
 V91VersionString = V9.1
 
 V81Description = IBM DB2 UDB for Linux, UNIX, and Windows Version 8.1
 V82Description = IBM DB2 UDB for Linux, UNIX, and Windows Version 8.2
+V91Description = IBM DB2 UDB for Linux, UNIX, and Windows Version 9.1
