CheckIn:Merge code in folder 1.5 to Plugins(HEAD)

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.xml
@@ -14,7 +14,7 @@
  *  
  *************************************************************************
  *
- * $Id: plugin.xml,v 1.18 2006/06/05 07:29:43 lzhu Exp $
+ * $Id: plugin.xml,v 1.1 2007/06/25 16:31:04 jgraham Exp $
  */
 -->
 
