--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/build.properties
@@ -11,7 +11,7 @@
 #  
 #*************************************************************************
 #
-# $Id$
+# $Id: build.properties,v 1.1 2007/06/25 16:31:05 jgraham Exp $
 #
 bin.includes = about.html,\
                plugin.xml,\
