--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.xml
@@ -14,7 +14,7 @@
  *  
  *************************************************************************
  *
- * $Id: plugin.xml,v 1.11 2007/03/16 11:47:16 lchan Exp $
+ * $Id: plugin.xml,v 1.1 2007/06/25 16:31:05 jgraham Exp $
  */
 -->
 
