--- a/plugins/org.eclipse.datatools.enablement.oda.xml/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/build.properties
@@ -11,7 +11,7 @@
 #  
 #*************************************************************************
 #
-# $Id: build.properties,v 1.4 2007/02/09 23:48:45 rcernich Exp $
+# $Id: build.properties,v 1.1 2007/06/25 16:33:27 jgraham Exp $
 #
 bin.includes = about.html,\
                plugin.xml,\
