--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
@@ -55,3 +55,13 @@ ConnectionProfileLabelProvider.label.versionIndicator={0} ({1} v. {2})
 ProfileSelectionDialog.Dialog.Title=Profile Browse
 ProfileSelectionDialog.Title=Select an available profile
 ProfileSelectionDialog.Message=Select from the list of available profiles.
+ExistingConnectionsDialogPage.CreateNewConnection.button = Create new connection
+ExistingConnectionsDialogPage.UseExistingConnection.button = Use existing connection
+ExistingConnectionsDialogPage.ExistingConnections.group = Existing Connections
+ExistingConnectionsDialogPage.Properties.label = Properties:
+ExistingConnectionsDialogPage.Property.columnHeader = Property
+ExistingConnectionsDialogPage.Value.columnHeader = Value
+
+
+
+
