[202643] Provide common UI for selecting conn profiles

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
@@ -55,13 +55,14 @@ ConnectionProfileLabelProvider.label.versionIndicator={0} ({1} v. {2})
 ProfileSelectionDialog.Dialog.Title=Profile Browse
 ProfileSelectionDialog.Title=Select an available profile
 ProfileSelectionDialog.Message=Select from the list of available profiles.
-ExistingConnectionsDialogPage.CreateNewConnection.button = Create new connection
-ExistingConnectionsDialogPage.UseExistingConnection.button = Use existing connection
-ExistingConnectionsDialogPage.ExistingConnections.group = Existing Connections
-ExistingConnectionsDialogPage.Properties.label = Properties:
+ExistingConnectionsDialogPage.ExistingConnections.group = Connections
+ExistingConnectionsDialogPage.Properties.label = Properties
 ExistingConnectionsDialogPage.Property.columnHeader = Property
 ExistingConnectionsDialogPage.Value.columnHeader = Value
-
-
-
+ExistingConnectionsDialogPage.Button.new = New...
+ExistingConnectionsDialogPage.Button.edit = Edit...
+ExistingConnectionsDialogPage.Button.delete = Delete
+ExistingConnectionsDialogPage.PropertyName.name = Name
+ExistingConnectionsDialogPage.PropertyName.description = Description
+ExistingConnectionsDialogPage.PropertyName.category = Category
 
