BZ 202585 Complete migration of Omit Schema project properties to Eclipse Preferences plus persistent properties of SQL File resource.

--- a/plugins/org.eclipse.datatools.sqltools.sqlbuilder/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlbuilder/plugin.properties
@@ -26,7 +26,7 @@
 _UI_PLUGIN_PROVIDER            = Eclipse.org
 _UI_PLUGIN_NAME                = SQL Builder
 _NL1_PLUGIN_NAME 			   = SQL Builder Nl1 Fragment
-_UI_BUILDER_NAME               = SQL Builder
+_UI_BUILDER_NAME               = SQL Query Builder
 
 !
 ! SQL Statement actions
@@ -35,7 +35,7 @@ datatools_sqlbuilder_sqlstatement_actions_new = New...
 datatools_sqlbuilder_sqlstatement_actions_newSQLStatement = New SQL Statement...
 datatools_sqlbuilder_sqlstatement_actions_newSQLStatement_tooltip = Create a New Query Statement
 datatools_sqlbuilder_sqlstatement_actions_openwith = Open With
-datatools_sqlbuilder_sqlstatement_actions_sqlbuilder = SQL Builder
+datatools_sqlbuilder_sqlstatement_actions_sqlbuilder = SQL Query Builder
 datatools_sqlbuilder_sqlstatement_actions_sqleditor = SQL Editor
 
 !SQL Editor
@@ -55,4 +55,4 @@ ContentTip_image       =
 ContentTip_description =Content Tip
 
 # Preference page name
-SQLBuilder.PreferencePageName = SQL Builder
+SQLBuilder.PreferencePageName = SQL Query Builder
