--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -139,3 +139,8 @@ StatusBar.WorkingOffline = Working offline
 
 DATATOOLS.SERVER.UI.EXPLORER.WORKOFFLINE = &Work Offline
 DATATOOLS.SERVER.UI.EXPLORER.UPDATE_OFFLINE = &Save Offline
+
+DriverPropertyEditorDescriptor.InvalidID = Driver Property Editor descriptor is missing a valid ID
+DriverPropertyEditorDescriptor.InvalidTargetTemplateID = Driver Property Editor descriptor is missing a valid target template ID
+DriverPropertyEditorDescriptor.InvalidTargetPropertyId = Driver Property Editor descriptor is missing a valid target property ID
+DriverPropertyEditorDescriptor.InvalidCustomPropertyEditorClass = Driver Property Editor descriptor is missing a valid custom property editor
