--- a/plugins/org.eclipse.datatools.enablement.postgresql/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.postgresql/build.properties
@@ -1,4 +1,13 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               icons/,\
+               plugin.properties,\
+               plugin.xml
+src.dir	= src/
+plugin.version =	1.0.0.200706071
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
