[203158]  Need strict separation between UI and non-UI enablement plug-ins

--- a/plugins/org.eclipse.datatools.enablement.postgresql/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.postgresql/build.properties
@@ -4,7 +4,8 @@ bin.includes = META-INF/,\
                .,\
                icons/,\
                plugin.properties,\
-               plugin.xml
+               plugin.xml,\
+               about.html
 src.dir	= src/
 plugin.version =	1.0.0.200706071
 javadoc.dir =		doc/api/
