--- a/plugins/org.eclipse.datatools.enablement.postgresql.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.postgresql.ui/build.properties
@@ -4,7 +4,8 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                plugin.properties,\
-               icons/
+               icons/,\
+               about.html
 src.dir	= src/
 plugin.version =	1.0.0.200706071
 javadoc.dir =		doc/api/
