--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries/build.properties
@@ -6,3 +6,9 @@ bin.includes = META-INF/,\
                plugin.properties,\
                icons/,\
                about.html
+src.dir	= src/
+plugin.version =	1.0.0.200706071
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
