BZ 202587 Work on componentization. Make new class SQLBuilderEditor for the editor and SQLBuilder class becomes the main UI class which can be used in an editor or a dialog.

--- a/plugins/org.eclipse.datatools.sqltools.sqlbuilder/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.sqlbuilder/plugin.xml
@@ -6,7 +6,7 @@
          point="org.eclipse.ui.editors">
       <editor
             id="org.eclipse.datatools.sqltools.sqlbuilder"
-            class="org.eclipse.datatools.sqltools.sqlbuilder.SQLBuilder"
+            class="org.eclipse.datatools.sqltools.sqlbuilder.SQLBuilderEditor"
             icon="images/qrydoc.gif"
             default="true"
             extensions="sql"
@@ -31,5 +31,4 @@
             id="org.eclipse.datatools.sqltools.sqlbuilder.preferences.SQLBuilderPreferencePage">
       </page>
     </extension>
-      
 </plugin>
