--- a/plugins/org.eclipse.datatools.enablement.mysql/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.mysql/plugin.properties
@@ -8,5 +8,24 @@
 # Contributors:
 #     Versant Corporation - initial API and implementation
 ###############################################################################
-pluginName=Eclipse Data Tools Platform MySQL enablement plug-in
+pluginName=Eclipse Data Tools Platform MySQL Enablement Plug-in
 providerName=Eclipse.org
+
+driverClass = Driver Class
+driverVendor = Vendor
+driverVersion = Version
+driverDBName = Database Name
+driverConnectionURL = Connection URL
+driverUID = User ID
+driverPWD = Password
+
+MYSQL_CATEGORY_NAME = MySQL
+4_0_VERSION_CATEGORY_NAME = 4.0
+4_1_VERSION_CATEGORY_NAME = 4.1
+5_0_VERSION_CATEGORY_NAME = 5.0
+5_1_VERSION_CATEGORY_NAME = 5.1
+
+org.eclipse.datatools.enablement.mysql.4_0.driverTemplate = MySQL JDBC Driver
+org.eclipse.datatools.enablement.mysql.4_1.driverTemplate = MySQL JDBC Driver
+org.eclipse.datatools.enablement.mysql.5_0.driverTemplate = MySQL JDBC Driver
+org.eclipse.datatools.enablement.mysql.5_1.driverTemplate = MySQL JDBC Driver
