--- a/plugins/org.eclipse.datatools.enablement.mysql/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.mysql/plugin.xml
@@ -69,4 +69,264 @@
             class="org.eclipse.datatools.enablement.mysql.ddl.MySqlDdlGenerator">
         </generator>
     </extension>
+    
+    <extension
+         point="org.eclipse.datatools.connectivity.driverExtension">    
+         <category
+      		parentCategory="org.eclipse.datatools.connectivity.db.driverCategory"
+            id="org.eclipse.datatools.enablement.mysql.driverCategory"
+            name="%MYSQL_CATEGORY_NAME"/>
+         <category
+      		parentCategory="org.eclipse.datatools.enablement.mysql.driverCategory"
+            id="org.eclipse.datatools.enablement.mysql.4_0.driverCategory"
+            name="%4_0_VERSION_CATEGORY_NAME"/>
+		 <category
+      		parentCategory="org.eclipse.datatools.enablement.mysql.driverCategory"
+            id="org.eclipse.datatools.enablement.mysql.4_1.driverCategory"
+            name="%4_1_VERSION_CATEGORY_NAME"/>
+         <category
+      		parentCategory="org.eclipse.datatools.enablement.mysql.driverCategory"
+            id="org.eclipse.datatools.enablement.mysql.5_0.driverCategory"
+            name="%5_0_VERSION_CATEGORY_NAME"/>
+		<category
+      		parentCategory="org.eclipse.datatools.enablement.mysql.driverCategory"
+            id="org.eclipse.datatools.enablement.mysql.5_1.driverCategory"
+            name="%5_1_VERSION_CATEGORY_NAME"/>
+            
+      <driverTemplate
+            createDefault="false"
+            emptyJarListIsOK="false"
+            id="org.eclipse.datatools.enablement.mysql.4_0.driverTemplate"
+            jarList="mysql-connector-java-4.0.0-bin.jar"
+            name="%org.eclipse.datatools.enablement.mysql.4_0.driverTemplate"
+            parentCategory="org.eclipse.datatools.enablement.mysql.4_0.driverCategory">
+         <properties>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.driverClass"
+                  name="%driverClass"
+                  value="com.mysql.jdbc.Driver"
+                  required="true"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.vendor"
+                  name="%driverVendor"
+                  value="MySql"
+                  required="true"
+                  visible="false"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.version"
+                  name="%driverVersion"
+                  value="4.0"
+                  required="true"
+                  visible="false"/>   
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.databaseName"
+                  name="%driverDBName"
+                  value="database"
+                  required="true"
+                  visible="true"/>                             
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.URL"
+                  name="%driverConnectionURL"
+                  value="jdbc:mysql://localhost:3306/database"
+                  required="true"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.username"
+                  name="%driverUID"
+                  value="root"
+                  required="false"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.password"
+                  name="%driverPWD"
+                  required="false"
+                  visible="true"/>
+         </properties>
+      </driverTemplate>
+		
+      <driverTemplate
+            createDefault="false"
+            emptyJarListIsOK="false"
+            id="org.eclipse.datatools.enablement.mysql.4_1.driverTemplate"
+            jarList="mysql-connector-java-4.1.0-bin.jar"
+            name="%org.eclipse.datatools.enablement.mysql.4_1.driverTemplate"
+            parentCategory="org.eclipse.datatools.enablement.mysql.4_1.driverCategory">
+         <properties>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.driverClass"
+                  name="%driverClass"
+                  value="com.mysql.jdbc.Driver"
+                  required="true"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.vendor"
+                  name="%driverVendor"
+                  value="MySql"
+                  required="true"
+                  visible="false"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.version"
+                  name="%driverVersion"
+                  value="4.1"
+                  required="true"
+                  visible="false"/>   
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.databaseName"
+                  name="%driverDBName"
+                  value="database"
+                  required="true"
+                  visible="true"/>                             
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.URL"
+                  name="%driverConnectionURL"
+                  value="jdbc:mysql://localhost:3306/database"
+                  required="true"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.username"
+                  name="%driverUID"
+                  value="root"
+                  required="false"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.password"
+                  name="%driverPWD"
+                  required="false"
+                  visible="true"/>
+         </properties>
+      </driverTemplate>
+		
+      <driverTemplate
+            createDefault="false"
+            emptyJarListIsOK="false"
+            id="org.eclipse.datatools.enablement.mysql.5_0.driverTemplate"
+            jarList="mysql-connector-java-5.0.0-bin.jar"
+            name="%org.eclipse.datatools.enablement.mysql.5_0.driverTemplate"
+            parentCategory="org.eclipse.datatools.enablement.mysql.5_0.driverCategory">
+         <properties>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.driverClass"
+                  name="%driverClass"
+                  value="com.mysql.jdbc.Driver"
+                  required="true"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.vendor"
+                  name="%driverVendor"
+                  value="MySql"
+                  required="true"
+                  visible="false"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.version"
+                  name="%driverVersion"
+                  value="5.0"
+                  required="true"
+                  visible="false"/>   
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.databaseName"
+                  name="%driverDBName"
+                  value="database"
+                  required="true"
+                  visible="true"/>                             
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.URL"
+                  name="%driverConnectionURL"
+                  value="jdbc:mysql://localhost:3306/database"
+                  required="true"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.username"
+                  name="%driverUID"
+                  value="root"
+                  required="false"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.password"
+                  name="%driverPWD"
+                  required="false"
+                  visible="true"/>
+         </properties>
+      </driverTemplate>
+
+	 <driverTemplate
+            createDefault="false"
+            emptyJarListIsOK="false"
+            id="org.eclipse.datatools.enablement.mysql.5_1.driverTemplate"
+            jarList="mysql-connector-java-5.1.0-bin.jar"
+            name="%org.eclipse.datatools.enablement.mysql.5_1.driverTemplate"
+            parentCategory="org.eclipse.datatools.enablement.mysql.5_1.driverCategory">
+         <properties>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.driverClass"
+                  name="%driverClass"
+                  value="com.mysql.jdbc.Driver"
+                  required="true"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.vendor"
+                  name="%driverVendor"
+                  value="MySql"
+                  required="true"
+                  visible="false"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.version"
+                  name="%driverVersion"
+                  value="5.1"
+                  required="true"
+                  visible="false"/>   
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.databaseName"
+                  name="%driverDBName"
+                  value="database"
+                  required="true"
+                  visible="true"/>                             
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.URL"
+                  name="%driverConnectionURL"
+                  value="jdbc:mysql://localhost:3306/database"
+                  required="true"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.username"
+                  name="%driverUID"
+                  value="root"
+                  required="false"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.password"
+                  name="%driverPWD"
+                  required="false"
+                  visible="true"/>
+         </properties>
+      </driverTemplate>		
+   </extension>
 </plugin>
