--- a/plugins/org.eclipse.datatools.enablement.sybase.asa.models/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa.models/build.properties
@@ -1,10 +1,9 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.2 2007/03/19 16:37:08 jgraham Exp $
+# $Id: build.properties,v 1.3 2007/06/07 16:10:51 jgraham Exp $
 
-bin.includes = models/,\
-               META-INF/,\
+bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                plugin.properties,\
