Update build.properties for DTP 1.6 builds

--- a/plugins/org.eclipse.datatools.connectivity.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/build.properties
@@ -3,7 +3,8 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                about.html,\
                META-INF/,\
-               .
+               .,\
+               schema/
 jars.compile.order = .
 source.. = src/
 output.. = bin/
