--- a/plugins/org.eclipse.datatools.connectivity/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity/build.properties
@@ -4,7 +4,12 @@ bin.includes = plugin.xml,\
                schema/,\
                .options,\
                META-INF/,\
-               .
+               .,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               eclipse32.gif,\
+               eclipse32.png
 jars.compile.order = .
 output.. = bin/
 source.. = src/
