Update build.properties for DTP 1.6 builds

--- a/plugins/org.eclipse.datatools.modelbase.derby/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.derby/build.properties
@@ -13,7 +13,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               about.html
                
 src.dir = src/
 plugin.version = 1.0.0.200706071
