--- a/plugins/org.eclipse.datatools.modelbase.sql/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql/build.properties
@@ -14,7 +14,13 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                about.html,\
-               plugin.properties
+               plugin.properties,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               build.properties,\
+               eclipse32.gif,\
+               eclipse32.png
 
 src.dir =		src/
 plugin.version =	1.0.0.200706071
