Update build.properties for DTP 1.6 builds

--- a/plugins/org.eclipse.datatools.sqltools.common.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.common.ui/build.properties
@@ -4,7 +4,13 @@ bin.includes = META-INF/,\
                .,\
                icons/,\
                about.html,\
-               plugin.xml
+               plugin.xml,\
+               about.mappings,\
+               about.ini,\
+               about.properties,\
+               eclipse32.gif,\
+               eclipse32.png,\
+               schema/
 
 src.dir = src/
 plugin.version =	1.0.0.200706181
