--- a/plugins/org.eclipse.datatools.sqltools.result/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result/build.properties
@@ -5,7 +5,8 @@ bin.includes = META-INF/,\
                about.html,\
                icons/,\
                plugin.properties,\
-               plugin.xml
+               plugin.xml,\
+               schema/
                
 src.dir =		src/
 plugin.version =	1.0.0.200709061
